--- a/main/_static/site/stylesheets/styles.css
+++ b/main/_static/site/stylesheets/styles.css
@@ -1110,7 +1110,7 @@ section {background: var(--light-color);}
   right: 0;
   width: 100%;
   height: 100%;
-  background: #000000;
+  background: #ffffff;;
   z-index: 0; /* Нижний z-index */
   opacity: 0.6;
 }
@@ -1567,8 +1567,8 @@ section {background: var(--light-color);}
 
 .hero h2 {
   font-size: 40px;
-  margin-bottom: 20px;
-  color: var(--hero-text-color);
+  margin-bottom: 60px;
+  color: #000000;
   text-transform: capitalize;
   letter-spacing: 0.7px;
   font-weight: 600;
@@ -2029,9 +2029,11 @@ dl, ol, ul {
 }
 .search-form input {
   width: 100%;
+  border-radius: 10px;
+  margin-left: 13px;
   padding: 14px 28px;
   background: #ffffff;
-  border: none;
+  border: solid black 1px;
   color: #393838;
   outline: none;
 }
